--- a/src/app/pages/footer/footer.component.html
+++ b/src/app/pages/footer/footer.component.html
@@ -2,13 +2,13 @@
   <footer>
     <div class="footer-content">
       <div class="footer-text">
-        <span class="footer-entity">Municipalidad Distrital de San Juan de Lurigancho</span>
-        <span class="footer-divider">|</span>
-        <span class="footer-system">Sistema GeoPortal de Información v{{version}}</span>
+      <!--  <span class="footer-entity">Municipalidad Distrital de San Juan de Lurigancho</span>
+        <span class="footer-divider">|</span>-->
+        <span class="footer-system">Portal de Información v{{version}}</span>
         <span class="footer-divider">|</span>
         <span class="footer-year">© {{year}}</span>
         <span class="footer-system"> Todos los derechos reservados</span>
-        <span class="footer-system login-link" style="cursor: pointer;color: #3f3f3f;" (click)="login()">Iniciar Sesión</span>
+
       </div>
     </div>
   </footer>
